@@ -1,3 +1,8 @@
+2007-08-03  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/gregex.c: Handle J changes in the pattern
+	correctly.  (#444765, Yevgen Muntyan)
+
 2007-08-03  Pramod Raghavendra  <pramodleo@yahoo.co.uk>
 
 	* configure.in: Added kn to ALL_LINGUAS
